--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^2.9.2"
+  },
+  "dependencies": {
+    "express": "^4.16.3"
   }
 }
