--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
   "author": "Nafis Fuad <fuadbd14@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.16.0",
+    "@types/pug": "^2.0.4",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.13.0",
     "typescript": "^2.9.2"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "periodic-table": "^0.0.8",
+    "pug": "^2.0.3"
   }
 }
