--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
-    "test": "jest --forceExit --coverage --verbose",
+    "test": "jest",
     "watch-test": "npm run test -- --watchAll",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
@@ -31,14 +31,19 @@
     "@types/dotenv": "^4.0.3",
     "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.16.0",
+    "@types/jest": "^23.3.0",
     "@types/node": "^10.5.2",
     "@types/pug": "^2.0.4",
     "@types/shelljs": "^0.8.0",
+    "@types/supertest": "^2.0.5",
     "compression": "^1.7.3",
     "concurrently": "^3.6.0",
+    "jest": "^23.4.1",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.2",
     "shelljs": "^0.8.2",
+    "supertest": "^3.1.0",
+    "ts-jest": "^23.0.1",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.13.0",
