--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "dotenv": "^6.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
+    "micromodal": "^0.3.2",
     "periodic-table": "^0.0.8",
     "pug": "^2.0.3"
   }
