--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
         "esModuleInterop": true,
-        "target": "es6",
+        "target": "es5",
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
@@ -17,5 +16,10 @@
     },
     "include": [
         "src/**/*"
+    ],
+    "lib": [
+        "es2016",
+        "dom",
+        "es5"
     ]
 }
