--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "esModuleInterop": true,
+        "module": "es6",
         "target": "es5",
         "noImplicitAny": true,
         "moduleResolution": "node",
