--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   ],
   "scripts": {
     "start": "npm run serve",
-    "build": "npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets && webpack",
+    "build": "npm run clean:build && npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\" \"webpack\"",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
     "test": "jest",
     "watch-test": "npm run test -- --watchAll",
     "build-ts": "tsc",
@@ -29,9 +29,21 @@
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/server.js",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\"",
-    "clean-cache": "npm cache clean --force"
+    "clean:cache": "npm cache clean --force",
+    "clean:build": "rimraf dist",
+    "coverage": "jest --coverage",
+    "babel:b": "babel-node --extensions '.ts,.tsx' src/public/js/index.ts --no-babelrc",
+    "babel:build": "babel-node --extensions '.ts,.tsx' src/public/js/index.ts --out-dir dist/public/js --no-babelrc",
+    "test:watch": "jest -o --watch",
+    "typecheck": "tsc"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.54",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/node": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/preset-stage-3": "^7.0.0-beta.54",
+    "@babel/preset-typescript": "^7.0.0-beta.54",
     "@types/compression": "^0.0.36",
     "@types/dotenv": "^4.0.3",
     "@types/errorhandler": "^0.0.32",
@@ -41,10 +53,12 @@
     "@types/pug": "^2.0.4",
     "@types/shelljs": "^0.8.0",
     "@types/supertest": "^2.0.5",
+    "babel-loader": "^7.1.5",
     "concurrently": "^3.6.0",
     "jest": "^23.4.1",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.2",
+    "rimraf": "^2.6.2",
     "shelljs": "^0.8.2",
     "supertest": "^3.1.0",
     "ts-jest": "^23.0.1",
@@ -52,7 +66,7 @@
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.13.0",
-    "typescript": "^2.9.2",
+    "typescript": "^2.1.6",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.1.0"
   },
