--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "start": "npm run serve",
-    "build": "npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets && webpack",
+    "build": "npm run clean:dist && npm run clean:cache && npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets && webpack",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\" \"webpack\"",
@@ -29,7 +29,8 @@
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/server.js",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\"",
-    "clean-cache": "npm cache clean --force"
+    "clean:cache": "npm cache clean --force",
+    "clean:dist": "rimraf dist"
   },
   "devDependencies": {
     "@types/compression": "^0.0.36",
@@ -45,6 +46,7 @@
     "jest": "^23.4.1",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.2",
+    "rimraf": "^2.6.2",
     "shelljs": "^0.8.2",
     "supertest": "^3.1.0",
     "ts-jest": "^23.0.1",
