--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "start": "npm run serve",
-    "build": "npm run clean:dist && npm run clean:cache && npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets && webpack",
+    "build": "npm run clean:dist && npm run clean:cache && npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\" \"webpack\"",
