updates build and watch task plus removes unnecessary and unused dependencies

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   ],
   "scripts": {
     "start": "npm run serve",
-    "build": "npm run clean:build && npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets",
+    "build": "npm run clean:cache && npm run clean:build && npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets && webpack",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\" \"webpack\"",
     "test": "jest",
     "watch-test": "npm run test -- --watchAll",
     "build-ts": "tsc",
@@ -32,18 +32,10 @@
     "clean:cache": "npm cache clean --force",
     "clean:build": "rimraf dist",
     "coverage": "jest --coverage",
-    "babel:b": "babel-node --extensions '.ts,.tsx' src/public/js/index.ts --no-babelrc",
-    "babel:build": "babel-node --extensions '.ts,.tsx' src/public/js/index.ts --out-dir dist/public/js --no-babelrc",
     "test:watch": "jest -o --watch",
     "typecheck": "tsc"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.54",
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/node": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "@babel/preset-stage-3": "^7.0.0-beta.54",
-    "@babel/preset-typescript": "^7.0.0-beta.54",
     "@types/compression": "^0.0.36",
     "@types/dotenv": "^4.0.3",
     "@types/errorhandler": "^0.0.32",
@@ -53,13 +45,14 @@
     "@types/pug": "^2.0.4",
     "@types/shelljs": "^0.8.0",
     "@types/supertest": "^2.0.5",
-    "babel-loader": "^7.1.5",
+    "awesome-typescript-loader": "^5.2.0",
     "concurrently": "^3.6.0",
     "jest": "^23.4.1",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.2",
     "rimraf": "^2.6.2",
     "shelljs": "^0.8.2",
+    "source-map-loader": "^0.2.3",
     "supertest": "^3.1.0",
     "ts-jest": "^23.0.1",
     "ts-loader": "^4.4.2",
@@ -73,7 +66,6 @@
   "dependencies": {
     "compression": "^1.7.3",
     "dotenv": "^6.0.0",
-    "errorhandler": "^1.5.0",
     "express": "^4.16.3",
     "micromodal": "^0.3.2",
     "periodic-table": "^0.0.8",
