--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "allowJs": true,
         "esModuleInterop": true,
         "module": "commonjs",
         "target": "esnext",
@@ -13,17 +14,23 @@
         "baseUrl": ".",
         "paths": {
             "*": [
-                "node_modules/*",
-                "src/types/*"
+                "./node_modules/@types/*",
+                "*"
             ]
         }
     },
     "include": [
         "src/**/*"
     ],
+    "exclude": [
+        "node_modules"
+    ],
     "lib": [
         "es2016",
         "dom",
         "es5"
     ],
+    "awesomeTypescriptLoaderOptions": {
+        "useBabel": true
+    }
 }
