--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "npm run clean:cache && npm run clean:dist && npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets && webpack",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\" \"webpack\"",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\" \"webpack --watch\"",
     "test": "jest",
     "watch-test": "npm run test -- --watchAll",
     "build-ts": "tsc",
