adds postcss and micromodal

--- a/package.json
+++ b/package.json
@@ -45,14 +45,19 @@
     "@types/pug": "^2.0.4",
     "@types/shelljs": "^0.8.0",
     "@types/supertest": "^2.0.5",
+    "autoprefixer": "^9.0.1",
     "awesome-typescript-loader": "^5.2.0",
     "concurrently": "^3.6.0",
+    "css-loader": "^1.0.0",
     "jest": "^23.4.1",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.2",
+    "postcss-loader": "^2.1.6",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.0.3",
     "shelljs": "^0.8.2",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.21.0",
     "supertest": "^3.1.0",
     "ts-jest": "^23.0.1",
     "ts-loader": "^4.4.2",
@@ -68,6 +73,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "micromodal": "^0.3.2",
+    "microtip": "^0.2.2",
     "periodic-table": "^0.0.8",
     "pug": "^2.0.3"
   }
