removes sass, embraces postcss, updates tasks, removes microtip and simply adds its css

--- a/package.json
+++ b/package.json
@@ -14,16 +14,14 @@
   ],
   "scripts": {
     "start": "npm run serve",
-    "build": "npm run clean:cache && npm run clean:dist && npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets && webpack",
+    "build": "npm run clean:cache && npm run clean:dist && npm run build-ts && npm run tslint && npm run copy-static-assets && webpack",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\" \"webpack --watch\"",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run watch-node\" \"webpack --watch\"",
     "test": "jest",
     "watch-test": "npm run test -- --watchAll",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
-    "build-sass": "node-sass src/public/scss/main.scss dist/public/css/main.css --output-style compressed",
-    "watch-sass": "node-sass -w src/public/scss/main.scss dist/public/css/main.css --output-style compressed",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "copy-static-assets": "ts-node copyStaticAssets.ts",
     "debug": "npm run build && npm run watch-debug",
@@ -47,12 +45,15 @@
     "@types/supertest": "^2.0.5",
     "autoprefixer": "^9.0.1",
     "awesome-typescript-loader": "^5.2.0",
+    "browserslist": "^4.0.1",
     "concurrently": "^3.6.0",
     "css-loader": "^1.0.0",
     "jest": "^23.4.1",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.2",
+    "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
+    "postcss-preset-env": "^5.3.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
     "shelljs": "^0.8.2",
@@ -73,7 +74,6 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "micromodal": "^0.3.2",
-    "microtip": "^0.2.2",
     "periodic-table": "^0.0.8",
     "pug": "^2.0.3"
   }
