--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "nodemon": "^1.18.2",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.6",
+    "postcss-normalize": "^6.0.0",
     "postcss-preset-env": "^5.3.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
