--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dist/index.js"
   ],
   "scripts": {
-    "start": "npm run serve",
+    "start": "npm run build && npm run serve",
     "build": "npm run clean:cache && npm run clean:dist && npm run build-ts && npm run tslint && npm run copy-static-assets && webpack",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\" \"webpack --watch\"",
     "serve": "node dist/server.js",
