--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/dotenv": "^4.0.3",
     "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.16.0",
+    "@types/helmet": "^0.0.38",
     "@types/jest": "^23.3.0",
     "@types/node": "^10.5.2",
     "@types/pug": "^2.0.4",
@@ -74,6 +75,7 @@
     "compression": "^1.7.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "helmet": "^3.13.0",
     "micromodal": "^0.3.2",
     "periodic-table": "^0.0.8",
     "pug": "^2.0.3"
