--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/express": "^4.16.0",
     "@types/helmet": "^0.0.38",
     "@types/jest": "^23.3.0",
+    "@types/materialize-css": "^1.0.4",
     "@types/node": "^10.5.2",
     "@types/pug": "^2.0.4",
     "@types/shelljs": "^0.8.0",
@@ -76,6 +77,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
+    "materialize-css": "^1.0.0-rc.2",
     "micromodal": "^0.3.2",
     "periodic-table": "^0.0.8",
     "pug": "^2.0.3"
