--- a/package.json
+++ b/package.json
@@ -1,84 +1,81 @@
 {
-  "name": "fuads-table",
-  "version": "1.0.0",
-  "description": "a simple periodic table",
-  "author": "Nafis Fuad <fuadbd14@gmail.com>",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nafis-fuad/periodictable"
-  },
-  "private": true,
-  "files": [
-    "dist/index.js"
-  ],
-  "scripts": {
-    "start": "npm run serve",
-    "build": "npm run clean:cache && npm run clean:dist && npm run build-ts && npm run tslint && npm run copy-static-assets && webpack",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\" \"webpack --watch\"",
-    "serve": "node dist/server.js",
-    "watch-node": "nodemon dist/server.js",
-    "build-ts": "tsc",
-    "watch-ts": "tsc -w",
-    "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "copy-static-assets": "ts-node copyStaticAssets.ts",
-    "debug": "npm run build && npm run watch-debug",
-    "serve-debug": "nodemon --inspect dist/server.js",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\"",
-    "clean:cache": "npm cache clean --force",
-    "clean:dist": "rimraf dist",
-    "coverage": "jest --coverage",
-    "typecheck": "tsc",
-    "test": "jest",
-    "watch-test": "npm run test -- --watchAll",
-    "jest:watch": "jest -o --watch"
-  },
-  "devDependencies": {
-    "@types/compression": "^0.0.36",
-    "@types/dotenv": "^4.0.3",
-    "@types/errorhandler": "^0.0.32",
-    "@types/express": "^4.16.0",
-    "@types/helmet": "^0.0.38",
-    "@types/jest": "^23.3.0",
-    "@types/materialize-css": "^1.0.4",
-    "@types/node": "^10.5.2",
-    "@types/pug": "^2.0.4",
-    "@types/shelljs": "^0.8.0",
-    "@types/supertest": "^2.0.5",
-    "autoprefixer": "^9.0.1",
-    "awesome-typescript-loader": "^5.2.0",
-    "browserslist": "^4.0.1",
-    "concurrently": "^3.6.0",
-    "css-loader": "^1.0.0",
-    "jest": "^23.4.1",
-    "node-sass": "^4.9.2",
-    "nodemon": "^1.18.2",
-    "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.6",
-    "postcss-normalize": "^6.0.0",
-    "postcss-preset-env": "^5.3.0",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.3",
-    "shelljs": "^0.8.2",
-    "source-map-loader": "^0.2.3",
-    "style-loader": "^0.21.0",
-    "supertest": "^3.1.0",
-    "ts-jest": "^23.0.1",
-    "ts-loader": "^4.4.2",
-    "ts-node": "^7.0.0",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.13.0",
-    "typescript": "^2.1.6",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.1.0"
-  },
-  "dependencies": {
-    "compression": "^1.7.3",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "helmet": "^3.13.0",
-    "materialize-css": "^1.0.0-rc.2",
-    "periodic-table": "^0.0.8",
-    "pug": "^2.0.3"
-  }
+	"name": "periodic-table",
+	"version": "0.0.1",
+	"description": "a simple periodic table",
+	"author": "Nafis Fuad <fuadbd14@gmail.com>",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/nafis-fuad/periodictable"
+	},
+	"private": false,
+	"scripts": {
+		"start": "npm run serve",
+		"build": "npm run clean:cache && npm run clean:dist && npm run build-ts && npm run tslint && npm run copy-static-assets && webpack",
+		"watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\" \"webpack --watch\"",
+		"serve": "node dist/server.js",
+		"watch-node": "nodemon dist/server.js",
+		"build-ts": "tsc",
+		"watch-ts": "tsc -w",
+		"tslint": "tslint -c tslint.json -p tsconfig.json",
+		"copy-static-assets": "ts-node copyStaticAssets.ts",
+		"debug": "npm run build && npm run watch-debug",
+		"serve-debug": "nodemon --inspect dist/server.js",
+		"watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\"",
+		"clean:cache": "npm cache clean --force",
+		"clean:dist": "rimraf dist",
+		"coverage": "jest --coverage",
+		"typecheck": "tsc",
+		"test": "jest",
+		"watch-test": "npm run test -- --watchAll",
+		"jest:watch": "jest -o --watch"
+	},
+	"devDependencies": {
+		"@types/compression": "^0.0.36",
+		"@types/dotenv": "^4.0.3",
+		"@types/errorhandler": "^0.0.32",
+		"@types/express": "^4.16.0",
+		"@types/helmet": "^0.0.38",
+		"@types/jest": "^23.3.0",
+		"@types/materialize-css": "^1.0.4",
+		"@types/node": "^10.5.2",
+		"@types/pug": "^2.0.4",
+		"@types/shelljs": "^0.8.0",
+		"@types/supertest": "^2.0.5",
+		"autoprefixer": "^9.0.1",
+		"awesome-typescript-loader": "^5.2.0",
+		"browserslist": "^4.0.1",
+		"concurrently": "^3.6.0",
+		"css-loader": "^1.0.0",
+		"jest": "^23.4.1",
+		"node-sass": "^4.9.2",
+		"nodemon": "^1.18.2",
+		"postcss-import": "^11.1.0",
+		"postcss-loader": "^2.1.6",
+		"postcss-normalize": "^6.0.0",
+		"postcss-preset-env": "^5.3.0",
+		"rimraf": "^2.6.2",
+		"sass-loader": "^7.0.3",
+		"shelljs": "^0.8.2",
+		"source-map-loader": "^0.2.3",
+		"style-loader": "^0.21.0",
+		"supertest": "^3.1.0",
+		"ts-jest": "^23.0.1",
+		"ts-loader": "^4.4.2",
+		"ts-node": "^7.0.0",
+		"tslint": "^5.11.0",
+		"tslint-config-prettier": "^1.13.0",
+		"typescript": "^2.1.6",
+		"webpack": "^4.16.1",
+		"webpack-cli": "^3.1.0"
+	},
+	"dependencies": {
+		"compression": "^1.7.3",
+		"dotenv": "^6.0.0",
+		"express": "^4.16.3",
+		"helmet": "^3.13.0",
+		"materialize-css": "^1.0.0-rc.2",
+		"periodic-table": "^0.0.8",
+		"pug": "^2.0.3"
+	}
 }
